static/styles/settings.css
#settings {
    margin-top: 55px;
    margin-left: 15px;
}

label {
    margin: 0;
}

.new-style .block {
    display: block;
}

.new-style .center-block {
    margin: 0 auto;
}

.new-style .center {
    text-align: center;
}

.new-style .w-70 {
    width: 70%;
}

.new-style .w-200 {
    width: 200px;
}

.new-style .m-t-20 {
    margin-top: 20px;
}

.new-style .m-t-10 {
    margin-top: 10px;
}

.new-style .grid .warning {
    display: inline-block;
    vertical-align: top;

    width: 150px;
    padding: 5px 10px;

    text-align: left;
}

.new-style .warning #pw_strength {
    width: 140px;
    height: 8px;
    margin: 6px 0px 0px 0px;
}

/* this is because the input[type=text] is also 200px wide but has
   12px of padding and 2px worth of borders. These don't apply to
   buttons however. */
.new-style .input-size {
    width: 214px;
}

.user-avatar-section,
.realm-icon-section {
    float: right;
    background-color: #fff;
    margin: 20px 0px;
    padding: 20px;
}

.user-avatar-section .inline-block,
.realm-icon-section .inline-block {
    display: block;
}

.padded-container {
    padding: 20px;
}

.side-padded-container {
    padding: 0px 20px;
}

.table.table-condensed.table-striped {
    margin: 0px;
}

.wrapped-table {
    table-layout: fixed;
    word-break: break-all;
    word-wrap: break-word;
    white-space: -moz-pre-wrap !important;
    white-space: -webkit-pre-wrap;
    white-space: -pre-wrap;
    white-space: -o-pre-wrap;
    white-space: pre-wrap;
    white-space: normal;
}

.wrapped-cell {
    width: 20%;
}

.table tbody {
    border-bottom: 1px solid #ddd;
}

.table-condensed td {
    vertical-align: middle;
}

td .button {
    margin: 2px 0px;
    box-shadow: none;
}

.settings-section {
    display: none;
    background-color: #fafafa;
    border-radius: 2px;
    margin: 20px;
    overflow: hidden;
    border: 1px solid #dfdfdf;
    border-top: 5px solid #dfdfdf;
}

#administration .settings-section {
    display: block;
}

.settings-wrapper {
    display: none;
}

.settings-section.show,
.settings-wrapper.show,
.settings-wrapper.show .settings-section {
    display: block;
}

.settings-section .settings-section-title {
    font-size: 1.2em;
    font-weight: 300;
    padding: 10px;
}

.settings-section .settings-section-title.transparent {
    background-color: transparent;
    color: inherit;
}

.settings-section form {
    padding: 0px 20px;
    margin: 0;
}

.settings-section .no-padding {
    padding: 0;
}

.settings-section .table.table-condensed.table-striped tbody {
    border-bottom: none;
}

.dynamic-input {
    display: inline-block;
    padding: 5px;
    background-color: #FFF;
    border: 1px solid #CCC;
    border-radius: 3px;
    transition: box-shadow 0.3s ease;
    min-width: 208px;
}

.dynamic-input:hover {
    outline: none;
    box-shadow: 0px 0px 4px rgba(56,177,232,1);
}

.dynamic-input div,
.dynamic-input label {
    display: inline-block;
    margin: 0;
}

.dynamic-input div {
    margin-right: -2px;
}

.dynamic-input [contenteditable=true] {
    outline: none;
}

.dynamic-input div:empty::after {
    content: "username";
    color: #aaa;
}

.dynamic-input.bot_user_name div:empty::after {
    content: "bot_user_name";
    color: #aaa;
}

.button,
.input-group {
    margin: 20px 0px;
}

.input-group.thinner {
    margin: 10px 0px;
}

.no-margin {
    margin: 0px;
}

.admin-restricted-to-domain input[type=checkbox] + .inline,
input[type=checkbox] + .inline-block {
    margin-left: 10px;
}

#user-settings-avatar,
#realm-icon-section {
    border-radius: 5px;
    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
}

input[type=checkbox].inline-block {
    margin: -2px 0px 0px 0px;
}

#attachments_list .attachment-item {
    border-bottom: 1px solid #eee;
}

#attachments_list .attachment-item .list-container {
    position: relative;
    padding: 10px;
    width: 100%;
}

#attachments_list .attachment-item .list-container .remove-attachment {
    margin-top: 10px;
    margin-right: 5px;
    font-size: 1.2em;
    color: #e29595;
}

#attachments_list .attachment-item .list-container .file-icon {
    display: inline-block;
    vertical-align: top;
    margin-right: 8px;
    width: 40px;
    height: 40px;

    font-weight: 600;
    color: #fff;

    background: -webkit-linear-gradient(-45deg, #43C6AC , #70e6ce);
    background: linear-gradient(-45deg, #43C6AC , #70e6ce);

    box-sizing: border-box;
    border-radius: 4px;
}

#attachments_list .attachment-item .list-container .file-icon .extension {
    font-size: 1.1em;
    text-align: center;
    margin-top: 10px;
}

#attachments_list .attachment-item .list-container .file-icon .extension.small {
    margin-top: 11px;
    font-size: 0.8em;
}

#attachments_list .attachment-item .list-container .file-icon .extension.no-extension {
    margin-top: 12px;
}

#attachments_list .attachment-item .list-container .information {
    display: inline-block;
    vertical-align: top;
    margin-top: -4px;
}

#attachments_list .attachment-messages {
    height: 25px;
}

#attachments_list .attachment-messages .ind-message {
    display: inline-block;
    border-radius: 4px;
    overflow: hidden;

    border: 1px solid #aaa;

    transition: all 0.2s ease;
}

#attachments_list .attachment-messages .ind-message > div {
    display: inline-block;
    vertical-align: top;
}

#attachments_list .attachment-messages .ind-message .message-id {
    padding: 2px 4px 1px 4px;
    background-color: #aaa;
    color: #fff;
}

#attachments_list .attachment-messages .ind-message:hover {
    border: 1px solid #888;
}

#attachments_list .attachment-messages .ind-message:hover .message-id {
    background-color: #888;
}

#attachments_list .attachment-messages .ind-message {
    color: #aaa;
    text-decoration: none;
}

#attachments_list .attachment-messages .message-id {
    display: inline-block;
    padding: 2px 4px 1px 2px;
}

#attachments_list .attachment-messages .message-date {
    display: inline-block;
    padding: 2px 4px 1px 2px;
}
/* ... */

